--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
         <a href="javascript:void(0);" onclick="openContact()">Kontakt</a>
         <span class="mobile-button" onclick="openMobile()">&#9776;</span>
         <div class="copyright">
-            <a href="https://github.com/rnycz"><i class="fab fa-github"></i></a>           
-            <p id="year1"></p>
-            &copy; Radosław Nycz
+          <a href="https://github.com/rnycz"><i class="fab fa-github"></i></a>           
+          <p id="year1"></p>
+          &copy; Radosław Nycz
         </div>
     </div>
     <div id="mobile" class="mobile-nav">
@@ -104,6 +104,7 @@
               <img src="images/cert-eng.PNG" class="skills-image" alt="certyfikat język angielski">
             </div>
           </div>
+          <p>Naciśnij na obrazek, aby poznać szczegóły.</p>
           <div id="skills-modal">
             <span class="close-modal" onclick="closeModalSkills()">&times;</span>       
             <img class="skills-modal-container" id="cert">
@@ -159,6 +160,7 @@
             alt="https://github.com/rnycz/PasswordGenerator" style="width: 100%; max-width: 300px;"> 
           </div>
           </div>
+          <p class="click-info">Naciśnij na obrazek, aby poznać szczegóły.</p>
           <h3>Więcej na moim profilu <a href="https://github.com/rnycz" target="_blank">GitHub</a></h3>            
 
           <div id="projects-modal">
