--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 <li>HTML5, CSS3, RWD</li>
                 <li>.NET/C# (WPF, WinForms, .NET MVC)</li>
                 <li>SQL (MS SQL Database), JavaScript, Git</li>
-                <li>Node.js</li>
+                <li>Node.js, MongoDB, React</li>
               </ul>
             </div>
           </div>
