--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css">
   </head>
   <body onload="getYear()">
+    <div class="graphic-box">
+      <div class="graphic-block"></div>
+    </div>
     <div class="navbar">
         <a href="javascript:void(0);" onclick="openPortfolio()">Portfolio</a>
         <a href="javascript:void(0);" onclick="openAboutMe()">O mnie</a>
@@ -66,10 +69,10 @@
           <div class="row">
             <div class="skills-list">
               <ul class="skills-square">
-                <li>HTML5, CSS3, RWD</li>
+                <li>HTML5, SCSS/CSS3, RWD</li>
                 <li>.NET/C# (WPF, WinForms, .NET MVC)</li>
-                <li>SQL (MS SQL Database), JavaScript, Git</li>
-                <li>Node.js, MongoDB, React</li>
+                <li>SQL (MS SQL Database), JavaScript/jQuery, Git</li>
+                <li>Node.js, MongoDB</li>
               </ul>
             </div>
           </div>
@@ -127,6 +130,14 @@
             <img class="projects-image" src="images/warehouse.PNG"
             alt="https://github.com/rnycz/WebApp" style="width: 100%; max-width: 300px;"> 
           </div>
+          </div>
+          <div class="row">
+            <div class="projects-column">
+              <p>Frontend layout dla wózka sklepowego z aktualizowanym na bieżąco koszykiem i filtrami<br />
+              Zastosowane technologie: HTML, SCSS, jQuery</p>
+              <img class="projects-image" src="images/shoppingcart.PNG"
+              alt="https://github.com/rnycz/shopping-cart" style="width: 100%; max-width: 300px;"> 
+            </div>
           </div>
           <div class="row">
             <h2 style="padding-top: 50px;">.NET/C#</h2>
