--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <a href="javascript:void(0);" onclick="openContact()">Kontakt</a>
         <span class="mobile-button" onclick="openMobile()">&#9776;</span>
         <div class="copyright">
-          <a href="https://github.com/rnycz"><i class="fab fa-github"></i></a>           
+          <a href="https://github.com/rnycz" target="_blank"><i class="fab fa-github"></i></a>           
           <p id="year1"></p>
           &copy; Radosław Nycz
         </div>
@@ -72,7 +72,7 @@
                 <li>HTML5, SCSS/CSS3, RWD</li>
                 <li>.NET/C# (WPF, WinForms, .NET MVC)</li>
                 <li>SQL (MS SQL Database), JavaScript/jQuery, Git</li>
-                <li>Node.js, MongoDB</li>
+                <li>Node.js, MongoDB, REST API, Postman</li>
               </ul>
             </div>
           </div>
@@ -132,11 +132,19 @@
           </div>
           </div>
           <div class="row">
+            <p></p>
             <div class="projects-column">
               <p>Frontend layout dla wózka sklepowego z aktualizowanym na bieżąco koszykiem i filtrami<br />
               Zastosowane technologie: HTML, SCSS, jQuery</p>
               <img class="projects-image" src="images/shoppingcart.PNG"
               alt="https://github.com/rnycz/shopping-cart" style="width: 100%; max-width: 300px;"> 
+            </div>
+            <div class="projects-column">
+              <p>RESTful CRUD API<br />
+                Funkcjonalności testowane w Postman<br />
+              Zastosowane technologie: Node.js, Express, MongoDB</p>
+              <img class="projects-image" src="images/restapi.PNG"
+              alt="https://github.com/rnycz/rest-api-players" style="width: 100%; max-width: 300px;"> 
             </div>
           </div>
           <div class="row">
