--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
         <div id="aboutme" style="display: none;">
           <h2>Kilka słów o mnie</h2>
           <div class="aboutme-container">
-            <p>Nazywam się Radek&#128578;aktualnie jestem studentem trzeciego roku na
-              Uniwersytecie Ekonomicznym w Katowicach. Studiuję Informatykę i ekonometrię
-              ze specjalnością biznes elektroniczny. Z programowaniem
+            <p>Nazywam się Radek&#128578;aktualnie jestem studentem pierwszego roku studiów magisterskich na
+              Uniwersytecie Ekonomicznym w Katowicach. Studiuję kierunek Gospodarka cyfrowa,
+              a wcześniej Informatyka i ekonometria (licencjat). Z programowaniem
               mam styczność od szkoły średniej. W technikum zdobyłem pierwsze umiejętności,
               zaczynając od tworzenia stron internetowych czy programowania w języku C++. &#128187;
               Na studiach poszerzam swoją wiedzę, a także uczę się nowych rzeczy takich jak, np.
@@ -70,9 +70,10 @@
             <div class="skills-list">
               <ul class="skills-square">
                 <li>HTML5, SCSS/CSS3, RWD</li>
-                <li>.NET/C# (WPF, WinForms, .NET MVC)</li>
-                <li>SQL (MS SQL Database), JavaScript/jQuery, Git</li>
-                <li>Node.js, MongoDB, REST API, Postman</li>
+                <li>SQL (MS SQL Database), JavaScript/jQuery</li>
+                <li>REST API, Postman, Git</li>
+                <li>Google Tag Manager, Google Analytics</li>
+                <li>.NET/C# (WPF, WinForms)</li>                
               </ul>
             </div>
           </div>
@@ -201,7 +202,7 @@
           <h1>HELLO</h1>         
           <h2>Radosław Nycz</h2>
           <p><i>Junior Frontend Developer</i></p>
-          <p><i>Junior .NET Developer</i></p>
+
         </div>
       </div>
     <div class="mobile-copyright">
