--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <div class="skills-list">
               <ul class="skills-square">
                 <li>HTML5, SCSS/CSS3, RWD</li>
-                <li>SQL (MS SQL Database), JavaScript/jQuery</li>
+                <li>SQL (MS SQL Database), JavaScript</li>
                 <li>REST API, Postman, Git</li>
                 <li>Google Tag Manager, Google Analytics</li>
                 <li>.NET/C# (WPF, WinForms)</li>                
@@ -126,10 +126,10 @@
             style="width: 100%; max-width: 300px;"> 
           </div>
           <div class="projects-column">
-            <p>Aplikacja internetowa do zarządzania magazynem<br />
-            Zastosowane technologie: .NET MVC, C#, HTML, JavaScript</p>
-            <img class="projects-image" src="images/warehouse.PNG"
-            alt="https://github.com/rnycz/WebApp" style="width: 100%; max-width: 300px;"> 
+            <p>Pogoda - wtyczka do przeglądarki Chrome<br />
+            Zastosowane technologie: JavaScript, SCSS, HTML, OpenWeatherMap API</p>
+            <img class="projects-image" src="images/weather-extension.png"
+            alt="https://github.com/rnycz/weather-extension" style="width: 30%; max-width: 300px;"> 
           </div>
           </div>
           <div class="row">
@@ -141,11 +141,11 @@
               alt="https://github.com/rnycz/shopping-cart" style="width: 100%; max-width: 300px;"> 
             </div>
             <div class="projects-column">
-              <p>RESTful CRUD API<br />
-                Funkcjonalności testowane w Postman<br />
-              Zastosowane technologie: Node.js, Express, MongoDB</p>
-              <img class="projects-image" src="images/restapi.PNG"
-              alt="https://github.com/rnycz/rest-api-players" style="width: 100%; max-width: 300px;"> 
+              <p>Aplikacja CRUD TODO<br />
+              Zadania zapisywane w przeglądarce za pomocą <i>localStorage</i><br />
+              Zastosowane technologie: JavaScript, SCSS, HTML</p>
+              <img class="projects-image" src="images/crud-todo.png"
+              alt="https://github.com/rnycz/crud-todo" style="width: 100%; max-width: 300px;"> 
             </div>
           </div>
           <div class="row">
