Update projects and skills

--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@
               <ul class="skills-square">
                 <li>HTML5, SCSS/CSS3, RWD</li>
                 <li>SQL (MS SQL Database), JavaScript</li>
-                <li>REST API, Postman, Git</li>
+                <li>React.js, Node.js, Chart.js</li>
+                <li>REST API, Git, NPM</li>
                 <li>Google Tag Manager, Google Analytics</li>
                 <li>.NET/C# (WPF, WinForms)</li>                
               </ul>
@@ -133,10 +134,10 @@
           <div class="row">
             <p></p>
             <div class="projects-column">
-              <p>Frontend layout dla wózka sklepowego z aktualizowanym na bieżąco koszykiem i filtrami<br />
-              Zastosowane technologie: HTML, SCSS, jQuery</p>
-              <img class="projects-image" src="images/shoppingcart.PNG"
-              alt="https://github.com/rnycz/shopping-cart" style="width: 100%; max-width: 300px;"> 
+              <p>Budget Tracker - śledź swój budżet<br />
+              Zastosowane technologie: React.js, SCSS and Chart.js</p>
+              <img class="projects-image" src="images/budget-tracker.png"
+              alt="https://github.com/rnycz/finance-app" style="width: 100%; max-width: 300px;"> 
             </div>
             <div class="projects-column">
               <p>Aplikacja CRUD TODO<br />
@@ -147,28 +148,27 @@
             </div>
           </div>
           <div class="row">
+            <p></p>
+            <div class="projects-column">
+              <p>Aplikacja czatu w czasie rzeczywistym<br />
+              Zastosowane technologie: React.js, Node.js, Socket.IO and SCSS</p>
+              <img class="projects-image" src="images/chat-app.png"
+              alt="https://github.com/rnycz/chat-app" style="width: 100%; max-width: 300px;"> 
+            </div>
+            <div class="projects-column">
+              <p>Gra oparta na popularnej grze Wisielec<br />
+              Zastosowane technologie: JavaScript, SCSS, HTML</p>
+              <img class="projects-image" src="images/guess-the-word.png"
+              alt="https://github.com/rnycz/guess-the-word" style="width: 100%; max-width: 300px;"> 
+            </div>
+          </div>
+          <div class="row">
             <h2 style="padding-top: 50px;">.NET/C#</h2>
           <div class="projects-column">
             <p>Aplikacja desktopowa - stwórz konto, graj i zdobywaj punkty<br />
             Zastosowane technologie: C#, WinForms, MS SQL Database</p>
             <img class="projects-image" src="images/forfunapp.PNG"
             alt="https://github.com/rnycz/ForFunApp"
-            style="width: 100%; max-width: 300px;"> 
-          </div>
-          <div class="projects-column">
-            <p>Po prostu Snake<br />
-            Zastosowane technologie: C#, WinForms</p>
-            <img class="projects-image" src="images/snake.PNG"
-            alt="https://github.com/rnycz/Snake" style="width: 100%; max-width: 180px;"> 
-          </div>
-          </div>
-          <div class="row">
-            <p></p>
-          <div class="projects-column">
-            <p>Aplikacja desktopowa do przeglądania zdjęć<br />
-            Zastosowane technologie: WPF, C#</p>
-            <img class="projects-image" src="images/image-gallery.PNG"
-            alt="https://github.com/rnycz/Image-Gallery"
             style="width: 100%; max-width: 300px;"> 
           </div>
           <div class="projects-column">
