Update skills and projects

--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
             <div class="skills-list">
               <ul class="skills-square">
                 <li>HTML5, SCSS/CSS3, RWD</li>
-                <li>SQL (MS SQL Database), JavaScript</li>
-                <li>React.js, Node.js, Chart.js</li>
-                <li>REST API, Git, NPM</li>
+                <li>SQL, JavaScript/TypeScript</li>
+                <li>React.js, Chart.js</li>
+                <li>REST API, Git, NPM, Node.js</li>
                 <li>Google Tag Manager, Google Analytics</li>
                 <li>.NET/C# (WPF, WinForms)</li>                
               </ul>
@@ -135,7 +135,7 @@
             <p></p>
             <div class="projects-column">
               <p>Budget Tracker - śledź swój budżet<br />
-              Zastosowane technologie: React.js, SCSS and Chart.js</p>
+              Zastosowane technologie: React.js, SCSS, Chart.js</p>
               <img class="projects-image" src="images/budget-tracker.png"
               alt="https://github.com/rnycz/finance-app" style="width: 100%; max-width: 300px;"> 
             </div>
@@ -151,15 +151,15 @@
             <p></p>
             <div class="projects-column">
               <p>Aplikacja czatu w czasie rzeczywistym<br />
-              Zastosowane technologie: React.js, Node.js, Socket.IO and SCSS</p>
+              Zastosowane technologie: React.js, Node.js, Socket.IO, SCSS</p>
               <img class="projects-image" src="images/chat-app.png"
               alt="https://github.com/rnycz/chat-app" style="width: 100%; max-width: 300px;"> 
             </div>
             <div class="projects-column">
-              <p>Gra oparta na popularnej grze Wisielec<br />
-              Zastosowane technologie: JavaScript, SCSS, HTML</p>
-              <img class="projects-image" src="images/guess-the-word.png"
-              alt="https://github.com/rnycz/guess-the-word" style="width: 100%; max-width: 300px;"> 
+              <p>Kanban Board - organizator zadań<br />
+              Zastosowane technologie: React.js, TypeScript, SCSS</p>
+              <img class="projects-image" src="images/kanban-board.png"
+              alt="https://github.com/rnycz/kanban-board" style="width: 100%; max-width: 300px;"> 
             </div>
           </div>
           <div class="row">
